<resources>
    <string name="app_name">SlugLife</string>
    <string name="title_activity_maps">SlugLife</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dialog_loc_title"><![CDATA[<font color=#212121>GeoBus</font> <font color=#757575>can\'t access your location</font>]]></string>
    <string name="dialog_loc_permission"><![CDATA[<font color=#757575>To enable and see your current location, navigate to Settings > Apps > GeoBus > Permissions.]]></string>
    <string name="title_activity_info">UCSC Shuttle Info</string>
    <string name="loop_upper">
        <![CDATA[
        <font color=#003399><b>CAMPUS LOOP</b></font><br/>
        <b>Weekdays</b><br/>
        Loop shuttles usually run every 10 minutes or less until 6pm, and every 10-20 minutes after 6pm.<br/><hr/><br/>

        <i>CW</i>:<br/>
        First run departs Barn Theater at <b>7:25am</b>.<br/>
        Last run departs Barn Theater at <b>11:00pm</b>.<br/><br/>

        <i>CCW</i>:<br/>
        First run departs Main Entrance at <b>7:25am</b>.<br/>
        Last run departs Main Entrance at <b>11:30pm</b>.<br/><br/>

        <b>Weekends</b><br/>
        <i>CW</i>:<br/>
        First run departs Barn Theater at <b>6:10pm</b>.<br/>
        Last run <b>Saturday</b> departs Barn Theater at <b>10:40pm</b>.<br/>
        Last run <b>Sunday</b> departs Barn Theater at <b>11:30pm</b>.<br/><br/>

        <i>CCW</i>:<br/>
        First run departs Main entrance at <b>6:00pm</b>.<br/>
        Last run <b>Saturday</b> departs Main Entrance at <b>10:40pm</b>.<br/>
        Last run <b>Sunday</b> departs Main Entrance at <b>11:20pm</b>.<br/><br/>

        <font color=#cc2900><b>UPPER CAMPUS</b></font><br/>
        <b>Weekdays</b><br/>
        Upper campus shuttles travel between East and West Remote parking lots every 15 minutes.<br/><br/>

        Departs East and West Remote lots every 15 minutes, <b>7:40am-7:55pm</b> (at :40, :55, :10, and :25 after the hour).<br/><br/>

        Final West Remote departure at <b>8:10pm</b> on <b>Tuesdays</b> and <b>Thursdays</b>.]]>
    </string>
    <string name="night_core">
        <![CDATA[
        <font color=#660033><b>EAST NIGHT CORE</b></font><br/>
        <b>Weekdays</b><br/>
        <i>Additional lines continue every 30 minutes after the initial run until midnight.</i><br/>
        Quarry Plaza:&#160;&#160;&#160;&#160;&#160;&#160; 7:00pm &#8230 11:30pm 12:00am<br/>
        East Remote:&#160;&#160;&#160;&#160;&#160;&#160; 7:02pm &#8230 11:32pm 12:02am<br/>
        Crown Circle:&#160;&#160;&#160;&#160;&#160;&#160; 7:06pm &#8230 11:36pm 12:06am (end)<br/>
        Science Hill:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 7:09pm &#8230 11:39pm<br/>
        West Remote:&#160;&#160;&#160;&#160;&#160; 7:20pm &#8230 11:50pm<br/>
        Media Theater:&#160;&#160;&#160; 7:22pm &#8230 11:52pm<br/>
        McHenry Library: 7:24pm &#8230 11:54pm<br/><br/>
        <b>Weekends</b><br/>
        <i>Same schedule, same end time, but starts 30 minutes earlier at 6:30pm.</i><br/><br/>
        <font color=#446600><b>WEST NIGHT CORE</b></font><br/>
        <b>Weekdays</b><br/>
        <i>Additional lines continue every 30 minutes after the initial run until midnight.</i><br/>
        Quarry Plaza:&#160;&#160;&#160;&#160;&#160;&#160;&#160; 7:00pm &#8230 11:30pm 12:00am<br/>
        Music Center:&#160;&#160;&#160;&#160;&#160;&#160; 7:03pm &#8230 11:33pm 12:03am<br/>
        West Remote:&#160;&#160;&#160;&#160;&#160;&#160; 7:10pm &#8230 11:40pm 12:10am (end)<br/>
        Kresge Bridge:&#160;&#160;&#160;&#160;&#160; 7:12pm &#8230 11:42pm<br/>
        Science Hill:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 7:13pm &#8230 11:43pm<br/>
        Crown Circle:&#160;&#160;&#160;&#160;&#160;&#160;&#160; 7:16pm &#8230 11:46pm<br/>
        Stevenson Circle: 7:20pm &#8230 11:50pm<br/><br/>
        <b>Weekends</b><br/>
        <i>Same schedule, same end time, but starts 30 minutes earlier at 6:30pm.</i>]]>
    </string>
    <string name="night_owl">
        <![CDATA[
        <font color=#4c0099><b>NIGHT OWL</b></font><br/>
        Night Owl buses pick up and drop off riders on Cathcart at Pacific, next to Old School shoes
        and across from the University Town Center in downtown Santa Cruz.<br/><br/>

        Buses stop at all off-campus Metro bus stops along the route, and at Loop bus stops on campus.<br/><br/>

        Most buses travel through campus in a counterclockwise (east to west) direction; <b><i>those
        that travel in a clockwise direction are lsited in italics in the schedule below</b> (note that
        some on campus stops are served in one direction only).</i><br/><br/>

        Night Owl service operates during fall, winter and spring school terms only; a valid UCSC ID must be presented to board.<br/><br/>
        
        Tap on Night Owl Schedule from the previous menu to see the schedule.
        ]]>
    </string>
    <string name="title_activity_night_owl">Night Owl Schedule</string>
    <string name="busStopName">Bus Stop Name</string>
    <string name="depart_Time">Depart Time</string>
    <string name="Bus_Name">Bus</string>
    <string name="nextBus">Next:</string>
    <string name="nextroute">Inner Loop</string>
    <string name="eta">ETA:</string>
    <string name="timeplaceholder">15 minutes</string>
    <string name="action_settings">Bus Main Menu</string>
    <string name="close_fragment">x</string>
    <string name="geobus_icon">GeoBus_icon.png</string>
    <string name="hamburger_subheader">Why bus when you can GeoBus?</string>
    <string name="loading">Loading...</string>
    <string name="favorite">Favorite</string>
    <string name="schedule">Schedule</string>
    <string name="notification">Notifications</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="Bus_Stop_Notifications">Start Notifications </string>
    <string name="update_notification">Update Notification</string>
    <string name="returnToMenu">Return</string>
    <string-array name="stops_array">
        <item> 1 Stop</item>
        <item> 2 Stops</item>
        <item> 3 Stops</item>
        <item> 4 Stops</item>
    </string-array>
    <string name="bus_route">Bus Route</string>
    <string-array name="route_array">
        <item>Outer Loop</item>
        <item>Inner Loop </item>
        <item>Upper Campus</item>
        <item>Any Loop</item>
    </string-array>
    <string name="type_of_notification">Notification Type</string>
    <string name="set_notification">SET NOTIFICATION</string>
    <string name="cancel_notification">CANCEL NOTIFICATION</string>
    <string name="stop_service">STOP SERVICE</string>
    <string name="cfdesc">stuff</string>
    <string name="cftitle">testing</string>
    <string name="custom_card">Inner Loop</string>
    <string name="description">ETA: 2 minutes</string>
    <string name="school_event">School Event</string>
    <string name="off_campus_event">Off Campus Event</string>
    <string name="bus_name_Test">Outer loop</string>
    <string name="bus_stopname">High and Western Dr</string>
    <string name="schedule_card">SCHEDULE</string>
    <string name="busevent"> Nearest Bus Stops </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifyMe">notifyme</string>
    <string name="map">Displays map</string>
    <string name="title_activity_main">SlugLife</string>
    <string name="title_activity_dining">DiningActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="detail_view_title">Detail View title</string>
    <string name="detail_view_image_description">Image taken at Baskin Engineering</string>
    <string name="detailfragment_layout_favbutton">Star image</string>
    <string name="detail_view_short_description">Dining Description</string>
    <string name="next_bus">Next Bus Arrives In: </string>
    <string name="location">Location</string>
    <string name="location_description">City location, Name of location</string>
    <string name="hour">Hours</string>
    <string name="time_place_holder">00:00 AM - 0:00 PM</string>
    <string name="cuisine_type">Cuisine Type</string>
    <string name="cuisine_place_holder">Mexican</string>
    <string name="price_range_info">Price Range</string>
    <string name="price_description">$ 0.00 and under per adult</string>
    <string name="calendar_display">Date</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="menu_open" />
    <string name="menu_close" />
    <string name="item_desc">This is a campus event, a lot of cool stuff going on at work</string>
    <string name="btn_action">Action</string>
    <string name="_details">DETAILS</string>
    <string name="title_activity_event_">Event_Activity</string>
    <string name="addmission_cost">Admission</string>
    <string name="cost">free</string>
    <string name="webpagelink">VISIT WEBPAGE</string>
    <string name="uppercampus">Upper Campus</string>
    <string name="minute">1 minute</string>
    <string name="nextBusStopEta">4:00 pm</string>
    <string name="profile_name">First Lastname</string>
    <string name="profile_email">sammytheslug@gmail.com</string>
    <string name="navitem">list item</string>
    <string-array name="navigation_drawer_account_item_array">
        
        <item>My Account</item>
        
        <item>My Profile</item>
        <item>Notification</item>
        <item>Class Schedule</item>
    </string-array>
    <string-array name="navigation_drawer_explore_item_array">
        
        <item>Explore</item>
        
        <item>Search</item>
        <item>Shuttle Schedule</item>
        <item>Metro Schedule</item>
    </string-array>
    <string-array name="navigation_drawer_help_support_item_array">
        
        <item>Help &amp; Support</item>
        
        <item>Tips &amp; Tricks</item>
        <item>Help Center</item>
        <item>Settings</item>
        <item>Sign In</item>
    </string-array>
    <string-array name="bus_filter_options">
        
        <item>Closest Stops</item>
    </string-array>
    <string-array name="event_filter_options">
        <item>Free Admission</item>
        <item>Closest Events</item>
        <item>On Campus</item>
        <item>Off Campus</item>

    </string-array>
    <string name="show_moret">SHOW MORE</string>
    <string name="show_less">SHOW LESS</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="agree">AGREE</string>
    <string name="disagree">DISAGREE</string>
    <string name="location_permission_title">Use Google\'s Location service?</string>
    <string name="location_permission_msg">Let Google help apps determine location. This means
        sending anonymous location data to Google, even when no apps are running</string>
    <string name="no_schedule_available"> There is no bus schedule available for this route at this time
    please try again later</string>
    <string name="error_loading_schedule"> Unable to get bus schedule</string>
    <string name="no_more_depart_times"> This route will not be arriving at this stop today</string>
    <string name="holiday_no_buses">Due to todays holiday, this route wont be running today</string>
    <string name="tab_settings">Tab Settings</string>
    <string name="hide_markers">Hide Markers</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="ok_dialog">Ok</string>
    <string name="show_dialog">Show</string>
    <string name="filter_options_dialog">Filter Options</string>
    <string name="random_text"> Random Text To Display</string>
    <string name="location_name">Location Name</string>
</resources>