<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextroute"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/supporting_text"
        android:id="@+id/textView3"
        android:paddingLeft="8dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView6"
        android:paddingRight="16dp"
        android:paddingTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eta"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/supporting_text"
        android:id="@+id/textView4"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeplaceholder"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/supporting_text"
        android:id="@+id/textView5"
        android:paddingLeft="8dp"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/textView3"
        android:layout_toEndOf="@+id/textView6"
        android:paddingRight="16dp"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextBus"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/supporting_text"
        android:id="@+id/textView6"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingTop="16dp" />
</RelativeLayout>