<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/busStopEventcv"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/busStopImage"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_directions_bus_black_24dp"
                android:layout_alignTop="@+id/busStop_name"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/busStop_name"
                android:text="@string/bus_stopname"
                android:layout_toRightOf="@+id/busStopImage"
                android:layout_alignParentTop="true"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextBus"
                android:id="@+id/next_bus"
                android:layout_toRightOf="@+id/busStopImage"
                android:layout_below="@+id/busStop_name"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextBusStopEta"
                android:id="@+id/person_age"
                android:layout_toRightOf="@+id/busStopImage"
                android:layout_below="@+id/next_bus"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>