<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00ffffff"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/genCardView"
        card_view:cardUseCompatPadding="true"
        android:background="#ffffff"
        android:backgroundTint="#00ffffff">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00ffffff"
            android:background="#ffffff"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgIcon"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_directions_bus_black_24dp"
                android:layout_alignTop="@+id/item_name"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_name"
                android:text="@string/bus_stopname"
                android:layout_toRightOf="@+id/imgIcon"
                android:layout_alignParentTop="true"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextBus"
                android:id="@+id/next_bus"
                android:layout_toRightOf="@+id/imgIcon"
                android:layout_below="@+id/item_name"
                android:textSize="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextBusStopEta"
                android:textSize="10sp"
                android:id="@+id/item_additional_info"
                android:layout_toRightOf="@+id/imgIcon"
                android:layout_below="@+id/next_bus"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>