<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventCardView"
        card_view:cardUseCompatPadding="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:id="@+id/card_top_half"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/thumbNail"
                        android:text="@string/nextBus"
                        android:textColor="@color/medium_grey"
                        android:id="@+id/content_type"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/content_type"
                        android:layout_toRightOf="@+id/thumbNail"
                        android:id="@+id/item_name"
                        android:text="@string/bus_stopname"
                        android:textSize="20sp"
                        android:textColor="@color/common_google_signin_btn_text_light_pressed"
                        android:layout_alignParentStart="true"
                        android:paddingTop="8dp"
                        android:textStyle="bold"
                        android:layout_toStartOf="@+id/thumbNail" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/card_text"
                        android:id="@+id/thumbNail"
                        android:src="@drawable/sample"
                        android:scaleType="centerInside"
                        android:layout_alignParentEnd="true" />




                    <TextView
                        android:id="@+id/card_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/item_name"
                        android:text="@string/item_desc"
                        android:ellipsize="end"
                        android:singleLine="false"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/article_subheading"
                        android:layout_alignParentStart="true"
                        android:paddingTop="20dp" />

                    <Button
                        android:id="@+id/action_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="?attr/colorPrimary"
                        android:text="@string/_details"
                        android:layout_below="@+id/card_text"
                        android:layout_marginTop="23dp"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="2dp" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>