<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:paddingBottom="@dimen/home_filter_handle_bar_height"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/detail_view"
        android:layout_below="@+id/view">
        <LinearLayout
            android:orientation="vertical"
            android:background="#ffffffff"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <RelativeLayout android:layout_width="fill_parent"
                android:layout_height="205.0dip">
                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/event_background"
                        android:clickable="false"
                        android:layout_width="fill_parent"
                        android:layout_height="192dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/detail_view_image_description"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:background="@color/colorPrimary"></RelativeLayout>

                    <ImageView
                        android:layout_width="193dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imgThumbNail"
                        android:layout_gravity="center"
                        android:background="@color/colorPrimary"
                        android:scaleType="fitXY" />

                </FrameLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:text="@string/detail_view_title"
                android:singleLine="false">
                <TextView
                    android:textSize="26.0sp"
                    android:textColor="@color/primaryText"
                    android:id="@+id/txtEvenTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5.0dip"
                    android:text="@string/detail_view_title"
                    android:singleLine="false"
                    android:layout_weight="1.0" />
                <ImageView
                    android:layout_gravity="top"
                    android:id="@+id/btnFavorite"
                    android:paddingLeft="15.0dip"
                    android:paddingTop="10.0dip"
                    android:paddingRight="20.0dip"
                    android:layout_width="150.0dip"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border_black_24dp"
                    android:scaleType="centerCrop"
                    android:layout_weight="2.0"
                    android:contentDescription="@string/detailfragment_layout_favbutton" />
            </LinearLayout>
            <TextView
                android:textSize="14.0sp"
                android:textColor="@color/primaryText"
                android:id="@+id/txtEventDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/detail_view_short_description"
                android:ems="15"
                android:layout_weight="11.45" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:focusable="false"
                android:background="#ffffff"
                >

                <Button
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:text="@string/webpagelink"
                    android:textColor="@color/primaryText"
                    android:id="@+id/btnWebPageUrl"
                    android:enabled="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:background="#ffffff"
                    android:elevation="15sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:elegantTextHeight="false"
                    android:focusable="false"/>



            </RelativeLayout>
            <include
                android:id="@+id/ViewEventDate"
                android:visibility="visible"
                layout="@layout/single_line_desciption"
                />
            <!--<include-->
                <!--android:id="@+id/hours_of_operation"-->
                <!--android:visibility="visible"-->
                <!--layout="@layout/hour_description" />-->
            <include
                android:id="@+id/txtAdmission"
                android:visibility="visible"
                layout="@layout/single_line_desciption"
                 />
            <include
                android:id="@+id/location_information"
                android:visibility="visible"
                layout="@layout/location_description" />


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:gravity="bottom|center|right"
        android:orientation="horizontal"
        android:id="@+id/view_bottom_bar"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/home_filter_handle_bar_height"
        android:divider="@drawable/divider_home_menu"
        android:layout_alignParentBottom="true"
        android:showDividers="beginning">
        <ImageButton
            android:id="@+id/btnSwitchView"
            android:padding="10.0dip"
            android:layout_width="@dimen/card_filter_button_map"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:layout_marginLeft="6.0dip"
            android:layout_marginRight="6.0dip"
            android:src="@drawable/ic_map_white_24dp"
            android:contentDescription="@string/map"
            android:background="#00ffffff" />
    </LinearLayout>

</RelativeLayout>